# DictaThesis

./: .gitignore  MIGRATION_SPEC.md  README.md  api_client.py  audio.py  hud.py  injector.py  main.py  pipeline.py  prompt.py  pyproject.toml  requirements.txt  settings_store.py  settings_ui.py  tray.py
app/: package-lock.json  package.json
app/src/main/: ipc-handlers.ts  main.ts  preload.ts  shortcuts.ts  sidecar.ts  tray.ts
app/src/renderer/: index.html  settings.html
app/src/renderer/app/: hud.ts  settings.ts  types.ts
app/src/renderer/styles/: global.css  hud.css  settings.css
python/: api_client.py  audio.py  context_reader.py  injector.py  lorem_ipsum.txt  pipeline.py  platform_utils.py  prompt.py  pyproject.toml  settings_store.py  sidecar.py  text_editor.py
